<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:id="@+id/lay_pemasok"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context="com.artolanggeng.purnamakertasindo.common.Pemasok"
		style="@style/DefaultActivity">

	<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:id="@+id/rlHeadPemasok">
		<include layout="@layout/lay_headerutama"/>


		<LinearLayout
			android:id="@+id/llUpdateProfile"
			android:layout_width="wrap_content"
			android:layout_height="32dp"
			android:layout_marginRight="8dp"
			android:paddingLeft="2dp"
			android:paddingRight="8dp"
			android:gravity="center_vertical|center_horizontal"
			android:clickable="true"
			android:background="@drawable/rectstrokegraywhite"
			android:animateLayoutChanges="true"
			android:layout_centerVertical="true"
			android:layout_alignParentEnd="false"
			android:layout_alignParentRight="true">

			<ImageView
				android:id="@+id/activity_scanqr_img_flash"
				android:layout_width="24dp"
				android:layout_height="24dp"
				android:layout_marginRight="4dp"
				android:layout_gravity="center_vertical"
				android:adjustViewBounds="true"
				android:src="@drawable/ic_sign_plus"
				android:scaleType="fitCenter"/>

			<TextView
				android:id="@+id/txt_flash"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:text="@string/strUpdateProfile"
				android:textColor="@android:color/black"
				android:textSize="16dp"/>
		</LinearLayout>
	</RelativeLayout>

	<ScrollView
			android:layout_below="@id/rlHeadPemasok"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_alignParentBottom="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true">

		<RelativeLayout
				android:layout_marginLeft="15dp"
				android:layout_marginRight="15dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

			<EditText
					style="@style/UserInputUsername"
					android:drawableLeft="@drawable/user"
					android:id="@+id/etProfile"
					android:hint="@string/HintPemasok"
					android:maxLength="25"
					android:layout_marginTop="15dp"/>

			<EditText
					style="@style/UserInputUsername"
					android:drawableLeft="@drawable/alamat"
					android:layout_width="match_parent"
					android:id="@+id/etAlamatProfile"
					android:hint="@string/HintAlamatPemasok"
					android:maxLines="3"
					android:layout_below="@id/etProfile"
					android:maxLength="75"
					android:layout_marginTop="15dp"/>

			<EditText
					style="@style/UserInputUsername"
					android:drawableLeft="@drawable/phones"
					android:id="@+id/etHPProfile"
					android:hint="@string/HintNoHPPemasok"
					android:layout_below="@id/etAlamatProfile"
					android:maxLength="25"
					android:layout_marginTop="15dp"
					android:inputType="phone"/>

			<EditText
					style="@style/UserInputUsername"
					android:drawableLeft="@drawable/email"
					android:id="@+id/etEmailProfile"
					android:hint="@string/HintAlamatEmail"
					android:layout_below="@id/etHPProfile"
					android:maxLength="25"
					android:layout_marginTop="15dp"
					android:inputType="textEmailAddress"/>

			<EditText
				style="@style/UserInputUsername"
				android:drawableLeft="@drawable/user"
				android:id="@+id/etTmpProfile"
				android:hint="@string/HintTmpProfile"
				android:layout_below="@id/etEmailProfile"
				android:maxLength="25"
				android:layout_marginTop="15dp"/>

			<EditText
					style="@style/UserInputUsername"
					android:id="@+id/etTglProfile"
					android:hint="@string/HintTglPemasok"
					android:layout_below="@id/etTmpProfile"
					android:maxLength="25"
					android:drawableLeft="@drawable/calendericon"
					android:layout_marginTop="15dp"/>

			<RadioGroup
					android:id="@+id/rgSeks"
					android:orientation="horizontal"
					android:layout_width="match_parent"
					android:layout_below="@id/etTglProfile"
					android:layout_height="wrap_content"
					android:layout_marginTop="15dp"
					android:weightSum="4">

				<RadioButton
						android:background="@android:color/white"
						android:id="@+id/cbPria"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:text="@string/HintPria"
						android:layout_marginRight="20dp"
						android:layout_weight="2.2"
						android:checked="true"/>

				<RadioButton
						android:background="@android:color/white"
						android:id="@+id/cbWanita"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:text="@string/HintPerempuan"
						android:layout_marginLeft="20dp"
						android:layout_weight="2"/>
			</RadioGroup>
		</RelativeLayout>
	</ScrollView>

</RelativeLayout>
