<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		style="@style/DefaultActivity">

	<ScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true">

		<RelativeLayout
				android:layout_marginLeft="15dp"
				android:layout_marginRight="15dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

			<TextView
				style="@style/UserInputUsername"
				android:drawableLeft="@drawable/user"
				android:id="@+id/tvNamaDevice"
				android:hint="@string/HintNamaDevice"
				android:maxLength="25"
				android:layout_marginTop="15dp"
				android:gravity="center_vertical"/>

			<TextView
					style="@style/UserInputUsername"
					android:drawableLeft="@drawable/alamat"
					android:layout_width="match_parent"
					android:id="@+id/tvJenisOS"
					android:hint="@string/HintJenisOS"
					android:maxLines="3"
					android:layout_below="@id/tvNamaDevice"
					android:maxLength="75"
					android:layout_marginTop="15dp"
					android:gravity="center_vertical"/>

			<TextView
					style="@style/UserInputUsername"
					android:drawableLeft="@drawable/phones"
					android:id="@+id/tvJenisDevice"
					android:hint="@string/HintJenisDevice"
					android:layout_below="@id/tvJenisOS"
					android:maxLength="25"
					android:layout_marginTop="15dp"
					android:inputType="phone"
					android:gravity="center_vertical"/>

			<RelativeLayout
				android:id="@+id/rlDataWarehouse"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/rectroundgrayblack1"
				android:layout_below="@id/tvJenisDevice"
				android:layout_marginTop="15dp">

				<Spinner
					android:id="@+id/spDataWarehouse"
					style="@style/DefaultSpinner"
					android:dropDownWidth="fill_parent"
					android:spinnerMode="dropdown"
					android:textSize="14sp"
					android:layout_height="40dp"/>
			</RelativeLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/llRTRWKpos"
				android:layout_below="@id/rlDataWarehouse"
				android:orientation="horizontal"
				android:weightSum="8"
				android:layout_marginTop="25dip"
				android:layout_marginLeft="35dip"
				android:layout_marginRight="35dip"
				android:layout_marginBottom="12dip">

				<Button
					style="@style/DefaultButton"
					android:ems="10"
					android:text="@string/strDaftarDevice"
					android:id="@+id/btnSubmitDaftar"
					android:layout_centerHorizontal="true"
					android:layout_marginRight="7dip"
					android:layout_weight="4"/>

				<Button
					style="@style/DefaultButton"
					android:ems="10"
					android:text="@string/strBtnBatal"
					android:id="@+id/btnBatalDaftar"
					android:layout_centerHorizontal="true"
					android:layout_marginLeft="7dip"
					android:layout_weight="4"/>
			</LinearLayout>
		</RelativeLayout>
	</ScrollView>
</RelativeLayout>
