<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:id="@+id/lay_main"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context="com.artolanggeng.purnamakertasindo.common.Login"
		style="@style/DefaultActivity">

	<RelativeLayout
			android:id="@+id/rlAll"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true">

		<RelativeLayout
				android:id="@+id/rlUtama"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingBottom="10dp"
				android:layout_marginLeft="56dp"
				android:layout_marginRight="56dp">

			<ImageView
					android:id="@+id/ivTitleLogin"
					android:background="@drawable/warehouselogo"
					android:scaleType="fitCenter"
					android:layout_alignParentTop="true"
					android:layout_centerHorizontal="true"
					android:layout_height="@dimen/HeightLogoSplash"
					android:layout_width="@dimen/WidthLogoSplash"/>

			<EditText
					style="@style/UserInputUsername"
					android:id="@+id/etUsername"
					android:layout_below="@id/ivTitleLogin"
					android:layout_marginTop="70dp"
					android:ems="10"
					android:maxLength="25"/>

			<EditText
					style="@style/UserInputPassword"
					android:id="@+id/etPass"
					android:layout_below="@id/etUsername"
					android:layout_alignParentStart="true"
					android:layout_marginTop="18dp"
					android:ems="10"
					android:layout_alignParentLeft="true"/>

			<Button
					style="@style/DefaultButton"
					android:id="@+id/btnLogin"
					android:layout_below="@id/etPass"
					android:layout_marginTop="35dp"
					android:text="@string/StrMasuk"/>

			<TextView
					style="@style/DefaultFooter"
					android:text="@string/strFooter1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAlignment="center"
					android:layout_below="@id/btnLogin"
					android:layout_marginTop="15dp"
					android:id="@+id/tvFooter1"/>

			<TextView
					style="@style/DefaultFooter"
					android:text="@string/strFooter2"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAlignment="center"
					android:layout_below="@id/tvFooter1"
					android:layout_marginTop="5dp"
					android:id="@+id/tvDaftarLogin"
					android:textStyle="normal|bold|italic"/>
		</RelativeLayout>

	</RelativeLayout>
</RelativeLayout>
